<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/laranja_claro"
    tools:context=".AcessoProfissional">

    <TextView
        android:id="@+id/acesso_profissional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="acesso_profissional"
        android:textColor="@color/azul_escuro"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dados_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dados_usuário"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toBottomOf="@id/acesso_profissional"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/ContainerComponentsP1"
        style="@style/ContainerComponentsP1"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dados_usuario"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cartao_SUS"
        style="@style/Button"
        android:text="@string/numero_cartao"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponentsP1"
        app:layout_constraintStart_toStartOf="@id/ContainerComponentsP1"
        app:layout_constraintTop_toTopOf="@id/ContainerComponentsP1"/>

    <TextView
        android:id="@+id/cadastro_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_cartao"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/bt_cartao_SUS"
        app:layout_constraintStart_toStartOf="@id/ContainerComponentsP1"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponentsP1"/>

    <TextView
        android:id="@+id/consultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultar"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ContainerComponentsP1"/>

    <View
        android:id="@+id/ContainerComponentsP2"
        style="@style/ContainerComponentsP2"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/consultar"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_ubs"
        style="@style/Button"
        android:text="@string/ubs"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponentsP2"
        app:layout_constraintStart_toStartOf="@id/ContainerComponentsP2"
        app:layout_constraintTop_toTopOf="@id/ContainerComponentsP2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_especialidade"
        style="@style/Button"
        android:text="@string/especialidade"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponentsP2"
        app:layout_constraintStart_toStartOf="@id/ContainerComponentsP2"
        app:layout_constraintTop_toBottomOf="@id/bt_ubs"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_agendamento"
        style="@style/Button"
        android:text="@string/agendamento"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponentsP2"
        app:layout_constraintStart_toStartOf="@id/ContainerComponentsP2"
        app:layout_constraintTop_toBottomOf="@id/bt_especialidade"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_encaminhamento"
        style="@style/Button"
        android:text="@string/encaminhamento"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponentsP2"
        app:layout_constraintStart_toStartOf="@id/ContainerComponentsP2"
        app:layout_constraintTop_toBottomOf="@id/bt_agendamento"/>

    <TextView
        android:id="@+id/voltar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="680dp"
        android:text="@string/voltar_login"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>