<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imagem_integrasus"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/imagem_integrasus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/ContainerComponents"
        style="@style/ContainerComponents"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_app_name" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:drawableRight="@drawable/ic_email"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponents"
        app:layout_constraintStart_toStartOf="@id/ContainerComponents"
        app:layout_constraintTop_toTopOf="@id/ContainerComponents" />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:drawableRight="@drawable/ic_eye"
        android:hint="@string/senha"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@id/ContainerComponents"
        app:layout_constraintStart_toStartOf="@id/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_email"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_entrar"
        style="@style/Button"
        android:text="@string/entrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"/>

    <TextView
    android:id="@+id/text_criar_conta"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/criar_conta"
    android:textSize="20sp"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="30dp"
    app:layout_constraintTop_toBottomOf="@id/ContainerComponents"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/imagem_integrasus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>